[package]
name = "multi"
version = "0.1.0"
authors = ["Brent Hamilton <hamilton.bh9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tetra = "0.6"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
message-io = "0.13.3"
anyhow = "1.0.40"
nanoid = "0.4.0"
